--- a/theory.html
+++ b/theory.html
@@ -231,7 +231,7 @@
                 </div>
                 
                 <p class="text-gray-700 leading-relaxed">
-                    Jebkuras vērtības, kas atrodas ārpus šīm robežām, tiek uzskatītas par izlecošas vērtību.
+                    Jebkuras vērtības, kas atrodas ārpus šīm robežām, tiek uzskatītas par izlecošas vērtībām.
                 </p>
             </div>
 
@@ -300,4 +300,5 @@
 </body>
 
 </html>
+
 
