--- a/examples.html
+++ b/examples.html
@@ -188,7 +188,7 @@
                                 <span class="font-bold accent-text">85.00 tūkst. EUR</span>
                             </div>
                             <div class="flex justify-between items-center p-3 bg-yellow-50 rounded">
-                                <span class="font-medium">IQR (Starpkvartīļu amplitūda):</span>
+                                <span class="font-medium">IQR (Starpkvartīļu amplitūda Q3-Q1):</span>
                                 <span class="font-bold accent-text">22.50 tūkst. EUR</span>
                             </div>
                         </div>
@@ -698,3 +698,4 @@
 </body>
 
 </html>
+
