--- a/examples.html
+++ b/examples.html
@@ -292,11 +292,11 @@
                 <div class="insight-box">
                     <h4 class="font-semibold mb-2">Rezultātu analīze:</h4>
                     <ul class="list-disc list-inside space-y-1 text-sm">
-                        <li>25% studentu ieguva mazāk nekā 78.00 punktus (nepieciešama papildu palīdzība).</li>
-                        <li>50% studentu ieguva mazāk nekā 85.00 punktus.</li>
-                        <li>25% studentu ieguva vairāk nekā 92.00 punktus (teicamnieki).</li>
-                        <li>Lielākā daļa studentu (50%) atrodas diapazonā 78.00-92.00 punkti.</li>
-                        <li>Studenti ar rezultātiem zem 57.00 un virs 113.00 punktiem tiek uzskatīti par izlecošām vērtībām.</li>
+                        <li>ne mazāk, ka 25% studentu ieguva līdz 78 punktām (nepieciešama papildu palīdzība).</li>
+                        <li>ne mazāk, ka 50% studentu ieguva līdz 85 punktām.</li>
+                        <li>ne mazāk, ka 25% studentu ieguva no 92 līdz 99 punktām (teicamnieki).</li>
+                        <li>ne mazāk, ka 50% studentu atrodas diapazonā no 78 līdz 92 punkti. Visur ieskaitot.</li>
+                        <li>Studenti ar rezultātiem zem 57 punktiem tiek uzskatīti par izlecošām vērtībām.</li>
                     </ul>
                 </div>
             </div>
@@ -698,4 +698,5 @@
 </body>
 
 </html>
+
 
