--- a/examples.html
+++ b/examples.html
@@ -393,7 +393,7 @@
             <div class="example-card">
                 <h2 class="text-2xl font-bold mb-6 text-gray-900">Interaktīvs Piemērs</h2>
                 <p class="text-gray-700 mb-6">
-                    Pārbaudiet savas prasmes! Ievadiet savus datus un redziet, kā darbojas kvartīļu analīze:
+                    Pārbaudiet savas prasmes. Ievadiet savus datus un redziet, kā darbojas kvartīļu analīze:
                 </p>
                 
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
@@ -698,5 +698,6 @@
 </body>
 
 </html>
+
 
 
