--- a/examples.html
+++ b/examples.html
@@ -296,7 +296,7 @@
                         <li>ne mazāk, ka 50% studentu ieguva līdz 85 punktām.</li>
                         <li>ne mazāk, ka 25% studentu ieguva no 92 līdz 99 punktām (teicamnieki).</li>
                         <li>ne mazāk, ka 50% studentu atrodas diapazonā no 78 līdz 92 punkti. Visur ieskaitot.</li>
-                        <li>Studenti ar rezultātiem zem 57 punktiem tiek uzskatīti par izlecošām vērtībām.</li>
+                        <li>Rezultāti zem 57 punktiem tiek uzskatīti par izlecošām vērtībām.</li>
                     </ul>
                 </div>
             </div>
@@ -698,6 +698,7 @@
 </body>
 
 </html>
+
 
 
 
