--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             stepsDiv.innerHTML += `<li>4. Solis: Aprēķiniet Q3 (Augšējās daļas mediāna): Dati: [${upperHalf.join(', ')}], Q3 = ${Q3.toFixed(2)}</li>`;
             stepsDiv.innerHTML += `<li>5. Solis: Aprēķiniet starpkvartīļu amplitūdu (IQR): IQR = Q3 - Q1 = ${Q3.toFixed(2)} - ${Q1.toFixed(2)} = ${IQR.toFixed(2)}</li>`;
             stepsDiv.innerHTML += `<li>6. Solis: Atrodiet Q0 un Q4: Min = ${Min.toFixed(2)}; Max = ${Max.toFixed(2)}</li>`;
-            stepsDiv.innerHTML += `<li>6. Solis: Atrodiet izlecošas vērtibas, kuri nepieder intervālam [Q1 - 1,5*IQR; Q3+1,5*IQR], tas ir [${Q1.toFixed(2)} - 1.5 * ${IQR.toFixed(2)} = ${lowerBound.toFixed(2)}; ${Q3.toFixed(2)} + 1.5 * ${IQR.toFixed(2)} = ${upperBound.toFixed(2)}]</li>`;
+            stepsDiv.innerHTML += `<li>6. Solis: Atrodiet izlecošas vērtibas, kuri nepieder intervālam [Q1 - 1,5*IQR; Q3+1,5*IQR], tas ir [${lowerBound.toFixed(2)}; ${upperBound.toFixed(2)}]</li>`;
 
 
             // Display Results
@@ -453,4 +453,5 @@
 </body>
 
 </html>
+
 
