--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ function calculateQuartiles() {
     resultsDiv.innerHTML = `
         <div class="space-y-3">
             <div class="flex justify-between items-center p-3 bg-gray-100 rounded">
-                <span class="font-medium">Minimālā "ūsa" (bez izlecošām):</span>
+                <span class="font-medium">Q0 (bez izlecošām vērtībām):</span>
                 <span class="font-bold accent-text">${minWhisker.toFixed(2)}</span>
             </div>
             <div class="flex justify-between items-center p-3 bg-red-50 rounded">
@@ -234,7 +234,7 @@ function calculateQuartiles() {
                 <span class="font-bold accent-text">${Q3.toFixed(2)}</span>
             </div>
             <div class="flex justify-between items-center p-3 bg-gray-100 rounded">
-                <span class="font-medium">Maksimālā "ūsa" (bez izlecošām):</span>
+                <span class="font-medium">Q4 (bez izlecošām vērtībām):</span>
                 <span class="font-bold accent-text">${maxWhisker.toFixed(2)}</span>
             </div>
             <div class="flex justify-between items-center p-3 bg-yellow-50 rounded">
@@ -362,3 +362,4 @@ document.addEventListener('DOMContentLoaded', () => {
 </body>
 
 </html>
+
