--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ function calculateQuartiles() {
                 <span class="font-bold accent-text">${maxWhisker.toFixed(2)}</span>
             </div>
             <div class="flex justify-between items-center p-3 bg-yellow-50 rounded">
-                <span class="font-medium">IQR:</span>
+                <span class="font-medium">IQR (starpkvartīļu amplitūda):</span>
                 <span class="font-bold accent-text">${IQR.toFixed(2)}</span>
             </div>
             <div class="p-3 bg-gray-100 rounded text-sm">
@@ -362,5 +362,6 @@ document.addEventListener('DOMContentLoaded', () => {
 </body>
 
 </html>
+
 
 
