--- a/Kvartiles.html
+++ b/Kvartiles.html
@@ -227,10 +227,10 @@ function calculateQuartiles() {
     }
     stepsDiv.innerHTML += `<li>3. Aprēķinam Q1 (kreisas daļas mediāna): ${formatDataArray(lowerHalf, true)} → Q1 = ${formatNumber(Q1)}</li>`;
     stepsDiv.innerHTML += `<li>4. Aprēķinam Q3 (labas daļas mediāna): ${formatDataArray(upperHalf, true)} → Q3 = ${formatNumber(Q3)}</li>`;
-    stepsDiv.innerHTML += `<li>5. Aprēķinam starpkvartīlu amplitūdu: IQR = Q3 − Q1 = ${formatNumber(Q3)} − ${formatNumber(Q1)} = ${formatNumber(IQR)}</li>`;
+    stepsDiv.innerHTML += `<li>5. Aprēķinam starpkvartīļu amplitūdu: IQR = Q3 − Q1 = ${formatNumber(Q3)} − ${formatNumber(Q1)} = ${formatNumber(IQR)}</li>`;
     stepsDiv.innerHTML += `<li>6. Robežas: [Q1 − 1,5·IQR; Q3 + 1,5·IQR] = [${formatNumber(lowerBound)}; ${formatNumber(upperBound)}]</li>`;
     stepsDiv.innerHTML += `<li>7. Izlecošas vērtības (atrodas ārpus šī diapazona): ${outliers.length ? formatDataArray(outliers) : 'nav'}</li>`;
-    stepsDiv.innerHTML += `<li>8. Noteicam Q0 un Q4, izņemot izlecošas vērtības: Q0 = ${formatNumber(minWhisker)}, Q4 = ${formatNumber(maxWhisker)}</li>`;
+    stepsDiv.innerHTML += `<li>8. Noteicam Q0 (Min) un Q4 (Max), izņemot izlecošas vērtības: Q0 = ${formatNumber(minWhisker)}, Q4 = ${formatNumber(maxWhisker)}</li>`;
 
     /* ----- rezultāti (Ar formatēšanu) ----- */
     resultsDiv.innerHTML = `
@@ -397,6 +397,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </body>
 
 </html>
+
 
 
 
