--- a/Kvartiles.html
+++ b/Kvartiles.html
@@ -74,7 +74,7 @@
                 <div class="content-card mb-10">
                     <h2 class="text-2xl font-bold mb-4">Datu ievade un aprēķins</h2>
                     <label for="dataInput" class="block text-sm font-medium text-gray-700 mb-2">
-                        Ievadiet datus (atdalot ar semikolu vai atstarpi):
+                        Ievadiet datus, atdalot ar atstarpi un nospiediet sarkano pogu vai ENTER:
                     </label>
                     <textarea id="dataInput" rows="6"
                               class="w-full p-3 border border-gray-300 rounded-lg focus:ring-red-500 focus:border-red-500"
@@ -397,6 +397,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </body>
 
 </html>
+
 
 
 
