--- a/index.html
+++ b/index.html
@@ -1,40 +1,104 @@
 <!DOCTYPE html>
 <html lang="lv">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matemātika – Sākumlapa</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Matemātika – Noderīgi rīki</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            padding: 20px;
-        }
-        h1 {
-            color: #333;
-        }
-        ul {
-            list-style-type: none;
+        * {
+            margin: 0;
             padding: 0;
+            box-sizing: border-box;
         }
-        li {
-            margin: 10px 0;
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #f5f7fa 0%, #e4edf9 100%);
+            color: #333;
+            min-height: 100vh;
+            padding: 40px 20px;
         }
-        a {
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 2.4rem;
+            margin-bottom: 30px;
+            color: #2c3e50;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.05);
+        }
+
+        .card {
+            background: white;
+            border-radius: 16px;
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
+            padding: 24px;
+            margin: 20px 0;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+        }
+
+        .card:hover {
+            transform: translateY(-4px);
+            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.12);
+        }
+
+        .card h2 {
+            font-size: 1.4rem;
+            margin-bottom: 12px;
+            color: #3498db;
+        }
+
+        .card p {
+            color: #555;
+            margin-bottom: 16px;
+            line-height: 1.5;
+        }
+
+        .card a {
+            display: inline-block;
+            padding: 10px 24px;
+            background-color: #3498db;
+            color: white;
             text-decoration: none;
-            color: #007BFF;
-            font-size: 18px;
+            border-radius: 8px;
+            font-weight: 600;
+            transition: background-color 0.2s;
         }
-        a:hover {
-            text-decoration: underline;
+
+        .card a:hover {
+            background-color: #2980b9;
+        }
+
+        footer {
+            margin-top: 40px;
+            color: #7f8c8d;
+            font-size: 0.9rem;
         }
     </style>
 </head>
 <body>
-    <h1>Matemātika – Noderīgi rīki</h1>
-    <ul>
-        <li><a href="https://olshle1.github.io/Matematika/Kvartiles.html">Kvartīļu kalkulators</a></li>
-        <li><a href="https://olshle1.github.io/Matematika/Lineara_funkcija.html">Lineārās funkcijas grafiks</a></li>
-    </ul>
+    <div class="container">
+        <h1>Matemātika – Noderīgi rīki</h1>
+
+        <div class="card">
+            <h2>Kvartīļu kalkulators</h2>
+            <p>Aprēķiniet kvartīles, starpkvartīļu amplitūdu (IQR), meklējiet izlecošās vērtības un skatiet kastu diagrammu.</p>
+            <a href="https://olshle1.github.io/Matematika/Kvartiles.html" target="_blank">Atvērt rīku</a>
+        </div>
+
+        <div class="card">
+            <h2>Lineārās funkcijas grafiks</h2>
+            <p>Izveidojiet un vizualizējiet lineārās funkcijas grafiku pēc dotā vienādojuma vai punktiem.</p>
+            <a href="https://olshle1.github.io/Matematika/Lineara_funkcija.html" target="_blank">Atvērt rīku</a>
+        </div>
+
+        <footer>
+            <p>© 2025 Matemātika | Mācīšanās un vizualizācija tiešsaistē</p>
+        </footer>
+    </div>
 </body>
 </html>
